# Scacchiera

./: .gitignore  CMakeLists.txt  README.md  log_cc.txt  readme.txt
lib/: bishop.h  board.h  computer.h  human.h  king.h  knight.h  pawn.h  piece.h  player.h  queen.h  rook.h  tabellone.h  writer.h
replay/lib/: log_reader.h  log_writer.h
replay/src/: log_reader.cpp  log_writer.cpp  main.cpp
src/: bishop.cpp  board.cpp  checkHelpers.cpp  computer.cpp  human.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  player.cpp  queen.cpp  rook.cpp  tabellone.cpp  writer.cpp
